--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,7 +7,7 @@ footer {
 	display: flex;
 	color: #ffffff;
 	flex-direction: column;
-	padding-bottom: 83px;
+	padding-bottom: 24px; /* Reduced from 83px */
 	position: relative;
 	text-align: center;
 	width: 100%;
